--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,10 @@
   --color-placeholder: #a0a3bd; /* Placeholder inputs */
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -21,6 +25,12 @@ body {
   background-color: var(--color-primary);
   color: var(--color-white);
   overflow-x: hidden;
+}
+
+.container {
+  width: 100%;
+  max-width: 1200px;
+  margin: auto;
 }
 
 /* Styles to header */
@@ -47,6 +57,16 @@ nav a {
   padding: 4rem 2rem;
 }
 
+/* Fondo de partículas */
+#particles-js {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+
 .hero h1 {
   font-size: 3rem;
   color: var(--color-muted);
@@ -56,7 +76,7 @@ nav a {
 .hero p {
   color: #f0f0f0;
   max-width: 400px;
-  margin: 1rem 0;
+  margin: 1rem auto;
   animation: fadeInUp 1s ease-out;
 }
 
@@ -69,6 +89,61 @@ nav a {
   font-size: 1rem;
   margin-top: 1rem;
   animation: fadeIn 2s ease-in-out;
+}
+
+.lines-bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  z-index: 1;
+}
+
+.lines-bg svg {
+  position: absolute;
+  width: 200%;
+  height: 100%;
+}
+
+.lines-bg svg:nth-child(1) {
+  animation: move1 10s linear infinite;
+}
+
+.lines-bg svg:nth-child(2) {
+  animation: move2 15s linear infinite;
+}
+
+.lines-bg svg:nth-child(3) {
+  animation: move3 20s linear infinite;
+}
+
+@keyframes move1 {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
+
+@keyframes move2 {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-30%);
+  }
+}
+
+@keyframes move3 {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-20%);
+  }
 }
 
 /* Styles to skills */
