--- a/css/globals.css
+++ b/css/globals.css
@@ -5,12 +5,12 @@
 }
 
 .row {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .text-center {
-    text-align: center;
+  text-align: center;
 }
 
 .btn-primary {
@@ -19,4 +19,19 @@
 
 .btn-danger {
   background: var(--color-accent);
+}
+
+.button {
+  width: 200px;
+  color: #fff;
+  border: none;
+  padding: 0.75rem 2rem;
+  cursor: pointer;
+  font-size: 1rem;
+  margin-top: 1rem;
+  animation: fadeIn 2s ease-in-out;
+  margin: auto;
+  z-index: 9999;
+  text-align: center;
+  text-decoration: none;
 }
